--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}High School{% endblock %}</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <header class="site-header">
@@ -16,9 +18,11 @@
         <li><a href="{{ url_for('home') }}"      class="{% if request.endpoint=='home' %}active{% endif %}">Home</a></li>
         <li><a href="{{ url_for('news') }}"      class="{% if request.endpoint=='news' %}active{% endif %}">News</a></li>
         <li><a href="{{ url_for('teachers') }}"  class="{% if request.endpoint=='teachers' %}active{% endif %}">Teachers</a></li>
+        <li><a href="{{ url_for('committees') }}"  class="{% if request.endpoint=='committees' %}active{% endif %}">Committees</a></li>
         <li><a href="{{ url_for('students') }}"  class="{% if request.endpoint=='students' %}active{% endif %}">Students</a></li>
         <li><a href="{{ url_for('results') }}"   class="{% if request.endpoint=='results' %}active{% endif %}">Results</a></li>
         <li><a href="{{ url_for('gallery') }}"   class="{% if request.endpoint=='gallery' %}active{% endif %}">Gallery</a></li>
+        <li><a href="{{ url_for('mpos') }}"   class="{% if request.endpoint=='mpos' %}active{% endif %}">MPO</a></li>
         <li><a href="{{ url_for('contact') }}"   class="{% if request.endpoint=='contact' %}active{% endif %}">Contact</a></li>
         <li><a href="{{ url_for('login') }}"     class="{% if request.endpoint == 'login' %}active{% endif %}">Login</a></li>
       </ul>
@@ -26,6 +30,7 @@
   </div>
 </header>
 
+<p>.</p>
 
   <main class="container">
     {% with messages = get_flashed_messages(with_categories=true) %}
@@ -46,7 +51,7 @@
         <h4>About</h4><p>Our high school is committed to academic excellence and character building.</p>
       </div>
       <div class="footer-col">
-        <h4>Contact</h4><p>Email: fahimahmedviil@gmail.com <br>Phone: 01714850660</p>
+        <h4>Contact</h4><p>Email: s118044@gmail.com <br>Phone: 01714850660</p>
       </div>
       <div class="footer-col">
         <h4>Follow Us</h4><p><a href="www.facebook.com" target="_blank">Facebook</a><br><a href="twitter.com">Twitter</a><br><a href="instagram.com">Instagram</a></p>
