--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -64,7 +64,9 @@
     <a href="{{ url_for('news_admin') }}" class="admin-link"><span>📰</span> Manage News</a>
     <a href="{{ url_for('gallery_admin') }}" class="admin-link"><span>🖼️</span> Manage Gallery</a>
     <a href="{{ url_for('teacher_admin') }}" class="admin-link"><span>👨‍🏫</span> Manage Teachers</a>
+    <a href="{{ url_for('committee_admin') }}" class="admin-link"><span>🏬</span> Manage Committees</a>
     <a href="{{ url_for('student_admin') }}" class="admin-link"><span>👨‍🎓</span> Manage Students</a>
+    <a href="{{ url_for('mpo_admin') }}" class="admin-link"><span>👉🏼</span> Manage MPOs</a>
     
     <a href="{{ url_for('result_admin') }}" class="admin-link">
   <span>📊</span> Manage Results
