--- a/templates/committee_admin.html
+++ b/templates/committee_admin.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
-{% block title %}Manage Teachers{% endblock %}
+{% block title %}Manage Committee{% endblock %}
 {% block content %}
 <div class="admin-form">
-  <h2>Manage Teachers</h2>
+  <h2>Manage Committee</h2>
   <form method="post" enctype="multipart/form-data">
     <div class="form-group">
       <label>Password:</label>
@@ -18,13 +18,13 @@
     </div>
     <div class="form-group">
       <label>Photo:</label>
-      <input type="file" name="photo" accept="image/*" required >
+      <input type="file" name="photo" accept="image/*" required>
     </div>
     <div class="form-actions">
       {% if last %}
-        <button type="submit" name="action" value="delete" class="btn btn-danger">Delete Last Teacher</button>
+        <button type="submit" name="action" value="delete" class="btn btn-danger">Delete Last member</button>
       {% endif %}
-      <button type="submit" name="action" value="post" class="btn btn-primary">Add Teacher</button>
+      <button type="submit" name="action" value="post" class="btn btn-primary">Add member</button>
     </div>
   </form>
 </div>
