--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,12 +1,32 @@
 {% extends 'base.html' %}
 {% block title %}Contact Us{% endblock %}
 {% block content %}
+
+<p>.</p>
 <div class="glass-card">
-  <h2>Contact Us</h2>
+  <h2>Contact the school</h2>
   <p>You can reach Palashbaria Secondary School at:</p>
   <ul>
     <li><strong>Phone:</strong> 01714850660 </li>
-    <li><strong>Email:</strong> info@palashbaria.edu.bd</li>
+    <li><strong>Email:</strong> s118044@gmail.com</li>
+    <li><strong>Address:</strong> Mohammadpur, Magura, Bangladesh</li>
+  </ul>
+</div>
+<div class="glass-card">
+  <h2>Contact for information</h2>
+  <p>You can ask information about Palashbaria Secondary School at:</p>
+  <ul>
+    <li><strong>Phone:</strong> 01925990381 </li>
+    <li><strong>Email:</strong>  jaraalam2012@gmail.com</li>
+    <li><strong>Address:</strong>Mohammadpur, Magura, Bangladesh</li>
+  </ul>
+</div>
+<div class="glass-card">
+  <h2>Contact to report an issue</h2>
+  <p>You can report any issue at:</p>
+  <ul>
+    <li><strong>Phone:</strong> 01714850660 </li>
+    <li><strong>Email:</strong> s118044@gmail.com</li>
     <li><strong>Address:</strong> Palashbaria, Mohammadpur, Magura, Bangladesh</li>
   </ul>
 </div>
