--- a/templates/result_admin.html
+++ b/templates/result_admin.html
@@ -18,7 +18,7 @@
     </div>
     <div class="form-group">
       <label>PDF File:</label>
-      <input type="file" name="photo" accept="application/pdf" >
+      <input type="file" name="photo" accept="application/pdf" required>
     </div>
     <div class="form-actions">
       {% if last %}
