--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Admin Panel{% endblock %}
+{% block title %}Admin Panel: Palashbaria Secondary School{% endblock %}
 {% block content %}
 
 <style>
@@ -66,7 +66,7 @@
     <a href="{{ url_for('teacher_admin') }}" class="admin-link"><span>👨‍🏫</span> Manage Teachers</a>
     <a href="{{ url_for('committee_admin') }}" class="admin-link"><span>🏬</span> Manage Committees</a>
     <a href="{{ url_for('student_admin') }}" class="admin-link"><span>👨‍🎓</span> Manage Students</a>
-    <a href="{{ url_for('mpo_admin') }}" class="admin-link"><span>👉🏼</span> Manage MPOs</a>
+    <a href="{{ url_for('mpo_admin') }}" class="admin-link"><span>👉🏼</span> Manage Accreditations</a>
     
     <a href="{{ url_for('result_admin') }}" class="admin-link">
   <span>📊</span> Manage Results
