--- a/templates/committee_admin.html
+++ b/templates/committee_admin.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Manage Committee{% endblock %}
+{% block title %}Manage Committee : Palashbaria Secondary School{% endblock %}
 {% block content %}
 <div class="admin-form">
   <h2>Manage Committee</h2>
