--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Contact Us{% endblock %}
+{% block title %}Contact Us : Palashbaria Secondary School{% endblock %}
 {% block content %}
 
 <p>.</p>
