--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Home{% endblock %}
+{% block title %}Home : Palashbaria Secondary School{% endblock %}
 {% block content %}
 
 <!-- Scoped styles for homepage -->
@@ -39,7 +39,6 @@
     line-height: 1.8;
   }
 </style>
-<p>.</p>
 <div class="hot-news">
     <p class="news-label">Latest News</p>
   </a>  <div class="scroll-container">
@@ -66,7 +65,7 @@
     <!-- Action Button -->
     <a class="btn btn-warning btn-lg mt-4 animate-bounce delay-2"
        href="{{ url_for('news') }}" role="button">
-      সর্বশেষ সংবাদ দেখুন&nbsp;<i class="bi bi-arrow-right-circle"></i>
+      সংবাদ দেখুন&nbsp;<i class="bi bi-arrow-right-circle"></i>
     </a>
   </div>
 </div>
