--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Admin log in{% endblock %}
+{% block title %}Admin log in : Palashbaria Secondary School{% endblock %}
 {% block content %}
 <div class="login-page">
   <div class="admin-form">
