--- a/templates/mpo_detail.html
+++ b/templates/mpo_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{{ mpo.name }}{% endblock %}
+{% block title %}{{ mpo.name }} : Palashbaria Secondary School{% endblock %}
 {% block content %}
 <style>
 
@@ -57,7 +57,7 @@
     </p>
   </div>
 </div>
-<a href="{{ url_for('mpos') }}">← Back to mpos</a>
+<a href="{{ url_for('mpos') }}">← Back to Accreditation </a>
   <!-- Lightbox modal -->
   <div id="lightbox" onclick="closeLightbox()">
     <span class="close">&times;</span>
