--- a/templates/results.html
+++ b/templates/results.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Results{% endblock %}
+{% block title %}Results : Palashbaria Secondary School{% endblock %}
 {% block content %}
 <h1>Results</h1>
 <div class="grid-2">
