--- a/templates/gallery_admin.html
+++ b/templates/gallery_admin.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Manage Gallery{% endblock %}
+{% block title %}Manage Gallery : Palashbaria Secondary School{% endblock %}
 {% block content %}
 <div class="admin-form">
   <h2>Manage Gallery</h2>
