--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{{ student.name }}{% endblock %}
+{% block title %}{{ student.name }} : Palashbaria Secondary School{% endblock %}
 {% block content %}
 <style>
 
