--- a/templates/teacher_admin.html
+++ b/templates/teacher_admin.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Manage Teachers{% endblock %}
+{% block title %}Manage Teachers : Palashbaria Secondary School{% endblock %}
 {% block content %}
 <div class="admin-form">
   <h2>Manage Teachers</h2>
