--- a/templates/teacher_detail.html
+++ b/templates/teacher_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{{ teacher.name }}{% endblock %}
+{% block title %}{{ teacher.name }} : Palashbaria Secondary School{% endblock %}
 {% block content %}
 <style>
 
